force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Completion_Date__c</fullName>
    <description>This field is deprecated and should not be referenced</description>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>