force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Merge_Result__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Merge_Result__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Merge Result</label>
    <referenceTo>sf_devops__Merge_Result__c</referenceTo>
    <relationshipLabel>Work Item Promotes</relationshipLabel>
    <relationshipName>Work_Item_Promotes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>