force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Pipeline_Stage__c</fullName>
    <description>The stage of this promotion</description>
    <label>Pipeline Stage</label>
    <referenceTo>sf_devops__Pipeline_Stage__c</referenceTo>
    <relationshipLabel>Work Item Promotes</relationshipLabel>
    <relationshipName>Work_Item_Promotes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>