force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Rebase_Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Rebase_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The status of the post promote rebase operation.</description>
    <label>Rebase Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Work Item Promote Rebases</relationshipLabel>
    <relationshipName>Work_Item_Promote_Rebases</relationshipName>
    <type>Lookup</type>
</CustomField>