force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The status of the promote operation.</description>
    <label>Status</label>
    <referenceTo>sf_devops__Async_Operation_Result__c</referenceTo>
    <relationshipLabel>Work Item Promotes</relationshipLabel>
    <relationshipName>Work_Item_Promotes</relationshipName>
    <type>Lookup</type>
</CustomField>