force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/fields/sf_devops__Work_Item__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Work_Item__c</fullName>
    <description>The work item that was promoted</description>
    <label>Work Item</label>
    <referenceTo>sf_devops__Work_Item__c</referenceTo>
    <relationshipLabel>Work Item Promotes</relationshipLabel>
    <relationshipName>Work_Item_Promotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>