force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/validationRules/sf_devops__No_Promotion_to_Inactive_Pipeline.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__No_Promotion_to_Inactive_Pipeline</fullName>
    <active>true</active>
    <description>You cannot promote a work item to a stage of an inactive pipeline</description>
    <errorConditionFormula>AND (
      ISNEW(),
   NOT( sf_devops__Pipeline_Stage__r.sf_devops__Pipeline__r.sf_devops__Activated__c )
)</errorConditionFormula>
    <errorMessage>You cannot promote a Work_Item to an inactive Pipeline.</errorMessage>
</ValidationRule>