force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/validationRules/sf_devops__Promoted_And_Installed.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_And_Installed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
      ISNEW(),
 NOT (ISBLANK(sf_devops__Work_Item__r.sf_devops__Change_Bundle__c))
)</errorConditionFormula>
    <errorMessage>A Work_Item that is a member of a Change_Bundle can not be promoted into a Pipeline_Stage.</errorMessage>
</ValidationRule>