force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/validationRules/sf_devops__Promoted_To_Versioned.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_To_Versioned</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      ISNEW(),
      sf_devops__Pipeline_Stage__r.sf_devops__Versioned__c 
)</errorConditionFormula>
    <errorMessage>A Work_Item cannot be promoted into a versioned Pipeline_Stage.</errorMessage>
</ValidationRule>