force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/validationRules/sf_devops__Promoted_Without_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_Without_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
   NOT (sf_devops__Work_Item__r.sf_devops__Development_Approved__c) 
 
 )</errorConditionFormula>
    <errorMessage>A WorkItem cannot be promoted if it is not Approved.</errorMessage>
</ValidationRule>