force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Work_Item_Promote__c/validationRules/sf_devops__Promoted_Wrong_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Promoted_Wrong_Project</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    sf_devops__Pipeline_Stage__r.sf_devops__Pipeline__r.sf_devops__Project__c  &lt;&gt;  sf_devops__Work_Item__r.sf_devops__Project__c 

)</errorConditionFormula>
    <errorMessage>A WorkItem can only be promoted to a stage within the same Project.</errorMessage>
</ValidationRule>